
Changes in archetypes version 2.1-0

  o Roxygen2-ified; added the Build-dep field to the DESCRIPTION
    file.

  o Removed deprecated functions.


Changes in archetypes version 2.0-2

  o Added analysis of the simulation study for robust archetypes
    as demo.


Changes in archetypes version 2.0-1

  o 'no.scalefn' returns an empty matrix if 'zs' is null.

  o 'xyplot.weightedArchetypes' displays the main diagonal if
    'weights' is a matrix.

  o Technical report on robust and weighted archetypes is cited.


Changes in archetypes version 2.0-0

  o Cleaned up interface; see '?archetypes-deprecated' and
    '?archetypes-generics'.

  o Added weighted and robust archetypes; see 'demo(robust-toy)' and
    'demo(robust-ozone)'.

  o Added 'memento' environment to save internal states.

  o Added panorama plot; see '?panorama.archetypes'

  o Improved 'barplot.archetypes'.

