@@ -17,15 +17,15 @@ export(stepArchetypes)
 export(weightedArchetypes)
 export(xyplot)
 exportMethods(parameters)
-importFrom(graphics,barplot)
+exportMethods(profile)
 importFrom(modeltools,parameters)
 importFrom(stats,coef)
 importFrom(stats,fitted)
+importFrom(stats,profile)
 importFrom(stats,residuals)
 importFrom(stats,screeplot)
 importFrom(stats,weights)
 S3method("[",stepArchetypes)
-S3method(barplot,archetypes)
 S3method(bestModel,repArchetypes)
 S3method(bestModel,stepArchetypes)
 S3method(coef,archetypes)
@@ -37,6 +37,8 @@ S3method(nparameters,stepArchetypes)
 S3method(panorama,archetypes)
 S3method(pcplot,archetypes)
 S3method(pcplot,default)
+S3method(plot,atypes_panorama)
+S3method(plot,atypes_profile)
 S3method(print,archetypes)
 S3method(print,repArchetypes)
 S3method(print,stepArchetypes)
