@@ -1,0 +1,67 @@
+
+
+#' Archetypes profile
+#'
+#' @param fitted An \code{\link{archetypes}} object.
+#' @param data The corresponding data set.
+#' @param type The profile function; currently only percentiles are
+#'   supported.
+#'
+#' @return A matrix (with class attribute \code{atypes_profile}) with
+#'   the computed profile.
+#'
+#' @aliases profile-methods
+#' @aliases profile,archetypes-method
+#'
+#' @examples
+#'   \dontrun{
+#'     data(toy)
+#'     a <- archetypes(toy, 3)
+#'     plot(profile(a, toy))
+#'   }
+#'
+#' @usage
+#'   \S4method{profile}{archetypes}(fitted, data, type = percentiles, ...)
+#'
+#' @importFrom stats profile
+#' @exportMethod profile
+setMethod("profile", signature = c(fitted = "archetypes"),
+function(fitted, data, type = percentiles, ...) {
+  stopifnot(!is.null(data))
+
+  profile <- parameters(fitted)
+  profile <- sapply(seq(length = ncol(data)),
+                    function(i) percentiles(profile[, i], data[, i]))
+
+
+  rownames(profile) <- sprintf("Archetype %s", seq(length = nrow(profile)))
+  colnames(profile) <- colnames(data)
+
+  class(profile) <- c("atypes_profile", class(profile))
+
+
+  profile
+})
+
+
+
+percentiles <- function(x, data, digits = 0) {
+  Fn <- ecdf(data)
+  round(Fn(x) * 100, digits = digits)
+}
+
+
+
+#' @param x An \code{atypes_profile} object.
+#' @param y Ignored.
+#' @param ... Ignored.
+#' @rdname profile
+#' @method plot atypes_profile
+#' @S3method plot atypes_profile
+plot.atypes_profile <- function(x, y = NULL, ...) {
+  p <- ggplot(melt(x), aes(X2, value))
+  p <- p + geom_bar(stat = "identity") + facet_grid(X1 ~ .)
+  p <- p + ylim(c(0, 100)) + xlab("Variables") + ylab("Percentile")
+  p
+}
+
