@@ -1,7 +1,11 @@
 
 Changes in archetypes version 2.1-0
 
-  o Roxygen2-ified; added the Build-dep field to the DESCRIPTION
+  o ggplot2-ified and introduced a clean abstraction between data and
+    visualization; e.g., 'panorama' now returns the panorama data with
+    a class attribute and 'plot' visualizes the panorama.
+
+  o roxygen2-ified; added the Build-dep field to the DESCRIPTION
     file.
 
   o Removed deprecated functions.
